// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The BaseLink component should render anchor links 1`] = `
<div
  data-island="baselink"
>
  <a
    href="#bottom"
  >
    Bottom
  </a>
</div>
`;

exports[`The BaseLink component should render disabled links 1`] = `
<div
  data-island="baselink"
>
  <a
    href="https://example.com"
    rel="noopener noreferrer"
    style="pointer-events: none;"
    tabindex="-1"
    target="_blank"
  >
    https://example.com
  </a>
</div>
`;

exports[`The BaseLink component should render download links 1`] = `
<div
  data-island="baselink"
>
  <a
    download="sample.pdf"
    href="http://www.africau.edu/images/default/sample.pdf"
    rel="noopener noreferrer"
    target="_blank"
  >
    sample.pdf
  </a>
</div>
`;

exports[`The BaseLink component should render external links 1`] = `
<div
  data-island="baselink"
>
  <a
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://example.com
  </a>
</div>
`;

exports[`The BaseLink component should render internal links 1`] = `
<div
  data-island="baselink"
>
  <a
    href="/"
  >
    Home
  </a>
</div>
`;

exports[`The BaseLink component should render locale links 1`] = `
<div
  data-island="baselink"
>
  <a
    href="/"
  >
    Home
  </a>
</div>
`;

exports[`The BaseLink component should render mailto links 1`] = `
<div
  data-island="baselink"
>
  <a
    href="mailto:foo@example.com"
  >
    foo@example.com
  </a>
</div>
`;
